--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>The basis of the site</h1>
+    <h1>Vedo if you ever find this you are fat </h1>
 </body>
 </html>
